added a description of offset

--- a/siori.html
+++ b/siori.html
@@ -79,7 +79,7 @@ $(document).ready(function() {
 <label for="numofpage">ページ数:</label>
 <input type="number" name="numofpage" id="numofpage" value="0" min="0">
 
-<label for="offset">オフセット:</label>
+<label for="offset">オフセット (表紙など、1ページより前のページの数):</label>
 <input type="number" name="offset" id="offset" value="0" min="0">
 
 <fieldset data-role="controlgroup" id="openway">
