--- a/siori.html
+++ b/siori.html
@@ -111,6 +111,8 @@ $(document).ready(function() {
 </div>
 <div class="ui-grid-a">
 この状態をひっくり返して置く。ここに右にあるものが印刷機だと左。
+</div>
+<div class="ui-grid-a">
 <div class="ui-block-a">
 <span class="ui-btn numbers" id="leftNum">XXX</span>
 </div>
