--- a/siori.html
+++ b/siori.html
@@ -110,7 +110,9 @@ $(document).ready(function() {
 </div>
 </div>
 <div class="ui-grid-a">
+<div class="ui-block-a">
 この状態をひっくり返して置く。ここに右にあるものが印刷機だと左。
+</div>
 </div>
 <div class="ui-grid-a">
 <div class="ui-block-a">
